# calculator-comrade-lib

./: .clang-tidy  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-android-on-linux  build-linux-on-linux  build-local.sh  build-on-host-linux-arm64.sh  build-on-host-linux-x64.sh  build-on-host-windows-x64.cmd  build-on-linux.sh  build-platform-on-linux  build-platform-on-linux.sh  build-platform.cmd  build-webassembly-on-linux  build.cmd  changelog.txt  copy-to-output-on-linux  toolchain-android-arm64-v8a.cmake  toolchain-android-armeabi-v7a.cmake  toolchain-android-x86.cmake  toolchain-arm64-v8a.cmake  toolchain-armeabi-v7a.cmake  toolchain-linux-arm.cmake  toolchain-linux-arm64.cmake  toolchain-linux-host_architecture.cmake  toolchain-linux-x86.cmake  toolchain-linux-x86_64.cmake  toolchain-win32.cmake  toolchain-win64.cmake
calculator/: CMakeLists.txt
calculator/include/calculator/: button.h  button_codes.h  calculator.h  config.h  display_register.h  libcalc.h  main.h  math.h  operation.h  operation_codes.h  option_codes.h  register.h  state.h  types.h
calculator/src/: calculator.cpp  libcalc.cpp  main.cpp  math.cpp
calculator_lib/: CMakeLists.txt
calculator_lib/include/calculator/: libcalc.h  libcalc_version.h.in
calculator_lib/src/: libcalc.cpp
calculator_wasm/: CMakeLists.txt
calculator_wasm/src/: main.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/src/: add_sub_input_tests.cpp  add_sub_tests.cpp  basic_input_tests.cpp  calc_add_sub_tests.cpp  calc_div_tests.cpp  calc_helper.cpp  calc_helper.h  calc_mul_tests.cpp  calc_percent_tests.cpp  div_input_tests.cpp  dump_tests.cpp  json.hpp  libcalc_tests.cpp  main.cpp  main_test.cpp  math_tests.cpp  mem_input_tests.cpp  mem_tests.cpp  mu_input_tests.cpp  mul_input_tests.cpp  mul_tests.cpp  percent_input_tests.cpp  register_tests.cpp  special_tests.cpp  sqrt_input_tests.cpp  state_tests.cpp
